[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
hex = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
serde = { workspace = true }
tokio = { version = "1.35", features = ["full"] }

bitcoin = { version = "0.31.1", features = ["serde"] }
bitcoincore-rpc = "0.18.0"
bitcoin-spv = "5.0.0"
