[package]
name = "bonsai-starter-methods"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "42266f0b6bd28de208b7c47b50dd4bcf241f76ce" }


[dependencies]
bytemuck = "1.13.1"
clap = { version = "4.2.7", features = ["derive"] }
hex = "0.4.3"
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "42266f0b6bd28de208b7c47b50dd4bcf241f76ce" }
bincode = "1.3"
anyhow = "1.0"
bonsai_sdk = { path = "../bonsai-sdk" }
risc0-recursion = { git = "ssh://git@github.com/risc0/risczero-wip.git", branch = "parker/update-0.15" }
