[package]
name = "bonsai-starter-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
ethabi = { version = "18.0", default-features = false }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "42266f0b6bd28de208b7c47b50dd4bcf241f76ce", default-features = false, features = ["std"] }
bincode = "1.3"

[profile.release]
lto = true
opt-level = 3
