[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bitcoin-block-verify"
path = "src/bin/bitcoin_block_verify.rs"

[workspace]

[dependencies]
bitcoin-spv = { version = "5.0.0", default-features = false }
risc0-zkvm = {  version = "0.21", default-features = false }

[profile.release]
lto = "thin"
